--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,8 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <!-- Real binding is only for tests to not override host application logging -->
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
